core/css/inputs.scss
/* ... */
div[contenteditable=false] {
	margin: 3px 3px 3px 0;
	padding: 7px 6px;
	font-size: 13px;
	background-color: $color-main-background;
	color: nc-lighten($color-main-text, 33%);
	border: 1px solid nc-darken($color-main-background, 14%);
	outline: none;
	border-radius: $border-radius;
	cursor: text;

	background-color: nc-darken($color-main-background, 8%);
	color: rgba($color-main-text, 0.4);
	cursor: default;
	opacity: 0.5;
}

/* Specific override */
input {
	&:not([type='radio']):not([type='checkbox']):not([type='range']):not([type='submit']):not([type='button']):not([type='reset']):not([type='color']):not([type='file']):not([type='image']) {
		-webkit-appearance: textfield;
		-moz-appearance: textfield;
	}
	&[type='radio'],
	&[type='checkbox'],
	&[type='file'],
	&[type='image'] {
		height: auto;
		width: auto;
	}
	/* Color input doesn't respect the initial height
 so we need to set a custom one */
	&[type='color'] {
		margin: 3px;
		padding: 0 2px;
		min-height: 30px;
		width: 40px;
		cursor: pointer;
	}
	&[type='hidden'] {
		height: 0;
		width: 0;
	}
	&[type='time'] {
		width: initial;
	}
}

/* 'Click' inputs */
select,
button, .button,
input[type='button'],
input[type='submit'],
input[type='reset'] {
	padding: 6px 12px;
	width: auto;
	min-height: 34px;
	cursor: pointer;
	box-sizing: border-box;
	background-color: nc-darken($color-main-background, 3%);
}

/* Buttons */
button, .button,
input[type='button'],
input[type='submit'],
input[type='reset'] {
	font-weight: bold;
	/* Get rid of the ugly firefox dotted line */
	&::-moz-focus-inner {
		border: 0;
	}
}
button, .button {
	> span {
		/* icon position inside buttons */
		&[class^='icon-'],
		&[class*=' icon-'] {
			display: inline-block;
			vertical-align: text-bottom;
			opacity: 0.5;
		}
	}
}

textarea, div[contenteditable=true] {
	color: nc-lighten($color-main-text, 33%);
	cursor: text;
	font-family: inherit;
	height: auto;
	&:not(:disabled) {
		&:active,
		&:hover,
		&:focus {
			border-color: nc-darken($color-main-background, 14%) !important;
			background-color: $color-main-background !important;
		}
	}
}

div[contenteditable=false] {
	color: nc-lighten($color-main-text, 33%);
	cursor: text;
	font-family: inherit;
	height: auto;
}

/* Override the ugly select arrow */
select {
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	background: url('../img/actions/triangle-s.svg') no-repeat right 4px center;
	background-color: inherit;
	outline: 0;
	padding-right: 24px !important;
}

/* Confirm inputs */
input {
	&[type='text'],
	&[type='password'],
	&[type='email'] {
		+ .icon-confirm {
			margin-left: -8px !important;
			border-left-color: transparent !important;
			border-radius: 0 $border-radius $border-radius 0 !important;
			background-clip: padding-box; /* Avoid background under border */
			background-color: $color-main-background !important;
			opacity: 1;
			width: 16px;
			padding: 7px 6px;
			cursor: pointer;
			&:disabled {
				cursor: default;
				background-image: url('../img/actions/confirm-fade.svg?v=2') !important;
			}
		}
		/* only show confirm borders if input is not focused */
		&:not(:active):not(:hover):not(:focus){
			+ .icon-confirm {
				&:active,
				&:hover,
				&:focus {
					border-color: $color-primary-element !important;
					border-radius: $border-radius !important;
					&:disabled {
						border-color: nc-darken($color-main-background, 14%) !important;
					}
				}
			}
		}
		&:active,
		&:hover,
		&:focus {
			+ .icon-confirm {
				border-color: $color-primary-element !important;
				border-left-color: transparent !important;
			}
		}
	}

}


/* Various Fixes */
button img,
.button img {
	cursor: pointer;
}
select,
.button.multiselect {
	font-weight: 400;
}
/* ... */

